Create route for updating categories
- created method for updating categories and linked method to route
- created test case for updating categories
- documented route for updating categories
