# routes/api.php
@@ -39,5 +39,7 @@ Route::prefix('v1')->group(function () {
         Route::get('categories', [CategoryController::class, 'index']);
         Route::get('category/{uuid}', [CategoryController::class, 'get']);
         Route::post('category/create', [CategoryController::class, 'store']);
+        Route::put('category/{uuid}', [CategoryController::class, 'update']);
+        Route::patch('category/{uuid}', [CategoryController::class, 'update']);
     });
 });
